# start_from_new

./: .cursorrules  .gitignore  PROJECT_STRUCTURE.md  README.md  env.example  start.bat
backend/: Dockerfile  pyproject.toml  requirements.txt  test_server.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py
backend/app/routes/: cache.py  expose_generation.py  properties.py  routers.py
backend/app/routes/component/llm/: __init__.py  azure_openai.py  llm_factory.py  prompts.py
backend/app/routes/endpoints/: auth.py  cache.py  expose_generation.py  images.py  properties.py
backend/app/schemas/: auth.py  expose.py  image.py  property.py
backend/app/services/: auth_service.py  expose_service.py  image_service.py  property_service.py
frontend/: PROJECT_STRUCTURE.md  README.md  README_PREVIEW.md  env.local  next.config.ts  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/components/: DynamicImageLayout.tsx
frontend/src/components/Shared/: TextBlock.tsx
frontend/src/components/atoms/: Avatar.tsx  Badge.tsx  Button.tsx  Divider.tsx  (+1 more)
frontend/src/hooks/: index.ts  useAIGeneration.ts  useImageLayout.ts  useImageUpload.ts  useMultiStepForm.ts  usePhotoUpload.ts  usePropertyForm.ts  useUploadImages.ts
frontend/src/services/: api.ts
frontend/src/styles/: exposeStyles.ts  pageDividerStyles.ts  pdfOptimized.css  scrollSnapStyles.ts
frontend/src/types/: index.ts  layout.ts  property.ts
frontend/styles/: tokens.ts
infra/: docker-compose.yml  init.sql
worker/: Dockerfile  main.py  requirements.txt
(+51 files in other folders)
